@@ -1,3 +1,8 @@
+2006-03-16  Ian Wienand  <ianw@gelato.unsw.edu.au>
+
+	* testsuite/ltrace.minor/trace-clone.c: use __clone2() for IA64
+	clone test
+
 2006-03=13  Paul Gilliam <pgilliam@us.ibm.com>
 
 	* Makefile.in: Add targets to support testsuite, including 'check'.
